Fix breadcrumbs on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,7 +108,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    min-height: 100%;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -346,15 +346,15 @@ ul.nav-links {
 }
 
 @media screen and (max-width: 500px) {
-    .detail-breadcrumb > a:first-child {
+    .detail-breadcrumb > a:first-child:not(:last-of-type) {
         display: none;
     }
 
-    .detail-breadcrumb > a:first-child + .breadcrumb-sep {
+    .detail-breadcrumb > a:first-child:not(:last-of-type) + .breadcrumb-sep {
         display: none;
     }
 
-    .detail-breadcrumb > a:last-child::before {
+    .detail-breadcrumb > a:last-of-type:not(:first-child)::before {
         content: "← ";
     }
 }
